--- a/Rapport/1Chapters/Implementation/IntroductionImplementation.tex
+++ b/Rapport/1Chapters/Implementation/IntroductionImplementation.tex
@@ -1,4 +1,4 @@
-\chapter{CPU introduction}
+\chapter{CPU Introduction}
 This chapter will give a general introduction to the TMS320C5515 DSP and its programming languages C, Assembler and how they function together. An overview of the TMS320C55xx architecture can be seen on \autoref{fig:DSP}. It has four different processing units in the CPU, the instrution buffer unit (IU), the program flow unit (PU), the adress-data flow unit (AU) and the data computation unit (UI) connected to 12 different adress and databusses.  
 \begin{figure}[H]
 \centering
