--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -64,7 +64,7 @@ With the specification stated and using the FIR theoy explained in \autoref{app:
 
 From \autoref{fig:band1_filt} it can be concluded that the filter meets the band requirements and has a constant group delay which means that spectral inversion can be made from the output. This concludes the decimation filter. 
 
-\section{Interpolation filter} \label{sec:IntFilter}
+\section{Interpolation Filter} \label{sec:IntFilter}
 The interpolation filter as mentioned before must be designed so it does not influence the bandwidth of the decimated signal, therefore the passband of the interpolation filter must be larger than stopband of the decimation filter. This means that the passband of the filter must be above 0.3 $\pi$ rad/sample, while there must be an attenuation of minimum 60 dB at approximately 0.7 $\pi$ rad/sample, which is the mirrored stopband of the decimation filter at the downsampled $f_s$ as seen on \autoref{fig:MirrorDec}. 
 
 \begin{figure}[H]
