--- a/Rapport/1Chapters/Filters/FiltersMAIN.tex
+++ b/Rapport/1Chapters/Filters/FiltersMAIN.tex
@@ -1,4 +1,4 @@
-\chapter{Filter design}
+\chapter{Filter Design}
 This chapter will describe how the filters in the system are designed for the decimator and interpolator, in more detail the chapter will examine the requirements, the design and the simulation of the quantisized filters. From \autoref{ch:designRealization} it was concluded that decimation and interpolation should be used to reduce the order of the filters.  
 Is was also concluded that the filters used for system should be FIR filters because of spectral inversion which would reduce the number of filters in the system, furthermore they have linear phase and no noise. The requirements concerning the filters are as follows:   
 \vspace{-2mm}
