--- a/Rapport/1Chapters/Acceptance/AcceptanceMAIN.tex
+++ b/Rapport/1Chapters/Acceptance/AcceptanceMAIN.tex
@@ -1,4 +1,4 @@
-\chapter{Acceptance test}
+\chapter{Acceptance Test}
 
 This chapter governs the acceptance test of the requirements from \autoref{ch:requirements}. The requirements are listed in \autoref{table:acceptancetest}. The table shows both reference number and the correlating appendix which documents the results.  
 
