--- a/Rapport/2Appendix/AcceptFilters.tex
+++ b/Rapport/2Appendix/AcceptFilters.tex
@@ -1,4 +1,4 @@
-\chapter{Accepttest of decimation and interpolation filter}\label{app:journal_decimationFilter}
+\chapter{Accepttest of Decimation and Interpolation Filter}\label{app:journal_decimationFilter}
 The purpose of these tests is to test the designed decimation filter to verify if the magnitude response and the phase response of the bands complies with class 2 of IEC 6964 standard (2001). The requirement for the interpolation filter is that it must not affect the bandwidth of the decimation signal.
 
 
