--- a/Rapport/2Appendix/AcceptanceTEST.tex
+++ b/Rapport/2Appendix/AcceptanceTEST.tex
@@ -1,4 +1,4 @@
-\chapter{Acceptance test of system}\label{app:acceptance_test}
+\chapter{Acceptance Test of System}\label{app:acceptance_test}
 
 The journal documents the acceptance test of the implemented system. The main purpose of the tests is to replicate the system used in \autoref{app:journal_speaker_test}, but with the DSP in-between the source and amplifier. The system is performed in a scaled environment where the the gain of the entire system is 3 dB lower than expected. This is done to protect the speaker against potential overloading.
 
