--- a/Rapport/0formalia/preface.tex
+++ b/Rapport/0formalia/preface.tex
@@ -1,7 +1,11 @@
 \chapter*{Preface}\label{ch:forord}%\addcontentsline{toc}{chapter}{Forord}
-This report has been carried out during spring of 2016 as a 6. semester Electronics and IT student bachelor project at Aalborg University by group 16gr640. The project concerns the development of a multi-band limiter as a protective system for loudspeakers. To realize the multi-band limiter a multirate system is made multiple stages.
+This report has been carried out during spring of 2016 as a 6. semester Electronics and IT student bachelor project at Aalborg University by group 16gr640. The project concerns the development of a multi-band limiter as a protective system for loudspeakers. 
+ 
+The project will be developed in cooperation with Danish Audiophile Loudspeaker Industries (DALI) whome will help with guidance of the project and loudspeakers for the project. 
 
-The project will be developed in cooperation with Danish Audiophile Loudspeaker Industries (DALI) (refer to \autoref{app:dali} for further information) whom will help with guidance of the project and speakers for the project.   
+The group will especially thank Jesper Thørring and Jakob Koed for technical advice and support and the students of whome participated in the tests conducted.
+
+The figures in the report is produced by the group unless a source is specified. Sources are indicated by [author,year] and can be found in the bibliography. The report is structured in chapters and sections, every figure, table, equation and listing is seperately numbered continuously through every chapter. Figures can be diagrams, flowcharts and graphs.
 \\\\
 %The report has the following structure: First, the segway platform is described and requirements to the controller are made. Hereafter, a model of the system is derived, and the controller can be made. Also, two digital filters are designed, together with a communication protocol between the segway and the wireless remote controller. Finally, an acceptance test and a discussion is made.\\
 %The reader of the report is assumed to have a basic understanding of physics, modelling electromechanical systems and basic controller design.
