--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -8,7 +8,7 @@ These possibilities in signal processing means that the potential of the active 
 To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. Because of the limited size, increasing the bass can potentially lead to sound distortions and cause the coil to hit the backplate of the driver if played too loud. The backplate hit will damage the loudspeaker and shorten the life time of the loudspeaker.
 
 % Protection and optimal sound
-To avoid potential damage, a system must be designed to prevent the coil from hitting the back plate. A common solution is to hard clip the signal whenever it is beyond the capabilities of the loudspeaker, as this ensures that the signal level is kept in the rated region. This however creates distortion which is undesirable. The aim of this project is therefore to develop a loudspeaker protective system, which can protect the loudspeaker against damage and still keep the amount distortion at a low level.
+To avoid potential damage, a system must be designed to prevent the coil from hitting the backplate. A common solution is to hard clip the signal whenever it is beyond the capabilities of the loudspeaker, as this ensures that the signal level is kept in the rated region. This however creates distortion which is undesirable. The aim of this project is therefore to develop a loudspeaker protection system, which can protect the loudspeaker against damage and still keep the amount distortion at a low level.
 
 
 
