--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -1,4 +1,4 @@
-\section{Platform requirements} \label{sec:platformReq}
+\section{Platform Requirements} \label{sec:platformReq}
 Most of the requirements derived in this section are provided by DALI thus the choice of platform will mostly be based on an analysis of which processor platform will be optimal in order to fulfill the requirements. The requirements for the processor platform have been derived in a mail correspondence with DALI\footnote{\scalebox{0.7}{\path{CD://MAIL/DALIRequirements.pdf}}}.
 %\subsection*{Demands for the platform}
 %The demands for the processor platform have been derived in a mail correspondence with DALI 
