--- a/Rapport/1Chapters/Filters/ReqInterface.tex
+++ b/Rapport/1Chapters/Filters/ReqInterface.tex
@@ -10,7 +10,7 @@ A filter for decimation will be designed which must meet requirement 12, and a f
 
 Because the system is a multirate system with octave bands as mentioned in \autoref{ch:designRealization} only one filter needs to be designed because the sampling frequency is halved for every octave resulting in the same coefficients for all decimation and interpolation filters.
 
-\section{Decimation filter}\label{sec:decFilter}
+\section{Decimation Filter}\label{sec:decFilter}
 The decimation filter must meet requirement 12 as just mentioned which states the requirements for the filter. The requirements can be seen in \autoref{fig:band1_reqOverview} and \autoref{tb:normalizedReqClass2} which states the requirements to the figure.
 
 \begin{figure}[H]
