--- a/Rapport/1Chapters/Implementation/mainCode.tex
+++ b/Rapport/1Chapters/Implementation/mainCode.tex
@@ -107,6 +107,7 @@ Where: \\
 - int16 delayVarX, contains a delayed output of a band. \\
 - int16 RMSXbandValue, contains a calculated RMS value of a band.
 
+\newpage
 The listing shows how a sample 1 of the schedueling in \autoref{tb:schedueling} is processed in the main program. A sample starts by waiting until a new sample has arrived which happens if "Rcv" and "I2S0\_IR" is equal to 1. The sample is then read into "audioIn" where a user controlled volume control is applied in line 4. Decimation is then done using downFunc1 with the input "audioIn" for the first stage. From downFunc1 two outputs "band1" and "down1" is read directly from their respective memory adress. If decimation was done in the second stage the input for downFunc2 is the decimated signal "down1" and the output would be "band2" and "down2".
 
 "Band1" is read into delayB1 which delays the sample 5309 samples, where the output is "delayVar1". The delayed sample is then read into the interpolation functions upFuncX. In this sample upFunc16, upFunc2 and upFunc1 runs. The input for the function is both a specific band and the upsampled signal. After the signal has been upsampled a sample has to be outputted to the audio codec, which is done in the same way as reading an input. A while loop is repeated until the sample is ready to be outputtet, here either a bypassed signal or the upsampled can be ouputtet dependent on the variable "byPass". %The sample is inputted in mono but outputtet as stereo. 
