--- a/Rapport/00setup/macros.tex
+++ b/Rapport/00setup/macros.tex
@@ -65,9 +65,9 @@
     \textbf{Project Group:}\\ #4\bigskip\par
     \textbf{Participants:}\\ #5\bigskip\par
     \textbf{Supervisor:}\\ #6\bigskip\par
-    \textbf{External Contact:}\\ #7\bigskip\par
+    \textbf{}\\ #7\bigskip\par
     \textbf{Copies:} #8\bigskip\par
-    \textbf{Page Numbers:} xx\bigskip\par
+    \textbf{Page Numbers:} 108 + 71 p. Appendix\bigskip\par
     \textbf{Date of Completion:}\\ #9
   }
 }
