--- a/Presentation/AAUsidebartheme.tex
+++ b/Presentation/AAUsidebartheme.tex
@@ -85,7 +85,7 @@
 %  \hspace{1cm}\pgfuseimage{titlepagelogo2}
 }
 \usepackage{subfloat}
-\usepackage{subcaption}
+%\usepackage{subcaption}
 \begin{document}
 % the titlepage
 {\aauwavesbg%
