--- a/Presentation/Poul.tex
+++ b/Presentation/Poul.tex
@@ -1,22 +1,50 @@
 
 \section{Optimering}
-\begin{frame}{Optimering}{Undertitel}
-	Now it goes real crazy
+\begin{frame}{Optimering}{}
+	
 \end{frame}
 
 \subsection{Relevante optimerings muligheder}
 \begin{frame}{Optimering}{Relevante optimerings muligheder}
-	Now it goes real crazy
+	\begin{itemize}
+\item Reducering af anvendte instruktioner.
+\begin{itemize}
+	\item Gennemsnitligt 900 instruktioner pr. sample.
+	\begin{enumerate}
+		\item Generel optimering såsom cirkulære buffer og DUAL-MAC
+		\item Polyphase FIR filtre
+	\end{enumerate}
+\end{itemize}
+
+\item Mindre delay gennem systemet
+\begin{itemize}
+	\item 111 ms delay gennem systemet
+	\begin{enumerate}
+		\item Færre trin/bånd (stages) i systemet
+		\item IIR filter i interpolation
+	\end{enumerate}
+\end{itemize}
+\item Bedre RMS limiter 
+	\end{itemize}
 \end{frame}
+
+
+
+
+
 
 \subsection{Implementerede optimeringer}
 \begin{frame}{Optimering}{Implementerede optimeringer}
 	Now it goes real crazy
 \end{frame}
 
-\section{Konklusion}
-\begin{frame}{Konklusion}{Jamen hvad gjorde du så?}
-	Now it goes real crazy
+\section{Perspektivering \& Konklusion}
+\begin{frame}{Perspektivering/Konklusion}{}
+	\begin{itemize}
+		\item something
+	\end{itemize}
+	
+	
 \end{frame}
 
 \section{Demonstration}
